<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search_movie"/>
        <item
            android:id="@+id/nav_Account"
            android:icon="@drawable/ic_person"
            android:title="@string/account"/>
        <item
            android:id="@+id/nav_Language"
            android:icon="@drawable/ic_language"
            android:title="@string/change_language"/>
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

    </group>

</menu>