<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin_8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin_16dp">

        <ImageView
            android:id="@+id/iv_list_itemupcoming_image"
            android:layout_width="@dimen/activity_margin_100dp"
            android:layout_height="@dimen/activity_margin_100dp"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tv_list_itemupcoming_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_list_itemupcoming_image"
            android:text="@string/label_title"
            android:layout_marginLeft="@dimen/activity_margin_16dp"
            android:layout_marginBottom="@dimen/activity_margin_16dp"/>

        <TextView
            android:id="@+id/tv_list_itemupcoming_rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_list_itemupcoming_image"
            android:layout_below="@id/tv_list_itemupcoming_title"
            android:text="@string/label_rank"
            android:layout_marginLeft="@dimen/activity_margin_16dp"
            android:layout_marginBottom="@dimen/activity_margin_16dp"/>

        <TextView
            android:id="@+id/tv_list_itemupcoming_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_list_itemupcoming_image"
            android:layout_below="@id/tv_list_itemupcoming_rank"
            android:text="@string/label_date"
            android:layout_marginLeft="@dimen/activity_margin_16dp"
            android:layout_marginBottom="@dimen/activity_margin_16dp"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>