<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin_16dp"
    tools:context=".SearchMovieActivity">

    <LinearLayout
        android:id="@+id/ll_searchmovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_margin_16dp"
        android:weightSum="1"
        android:background="@color/colorBackgroundSearch"
        android:layout_below="@id/appbar_main">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:background="@drawable/ic_search"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="@string/search_hint"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/label_search"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_searchmovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"/>

    <TextView
        android:id="@+id/tv_searchmovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_result"
        android:layout_centerInParent="true"
        android:gravity="center"/>

    <ProgressBar
        android:id="@+id/pb_searchmovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

</RelativeLayout>