<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:fitsSystemWindows="true"
            android:src="@mipmap/ic_launcher"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_margin_16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/activity_margin_16dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/label_title"
                    android:textColor="@color/colorTextDark"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text=":"
                    android:textColor="@color/colorTextDark"/>

                <TextView
                    android:id="@+id/tv_detail_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_title"
                    android:textColor="@color/colorTextDark"
                    android:layout_marginRight="@dimen/activity_margin_16dp"/>

            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/activity_margin_16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/label_rank"
                    android:textColor="@color/colorTextDark"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text=":"
                    android:textColor="@color/colorTextDark"/>

                <TextView
                    android:id="@+id/tv_detail_rank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_rank"
                    android:textColor="@color/colorTextDark"
                    android:layout_marginRight="@dimen/activity_margin_16dp"/>

            </TableRow>

            <TableRow android:layout_marginBottom="@dimen/activity_margin_16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/label_date"
                    android:textColor="@color/colorTextDark"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text=":"
                    android:textColor="@color/colorTextDark"/>

                <TextView
                    android:id="@+id/tv_detail_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_date"
                    android:textColor="@color/colorTextDark"
                    android:layout_marginRight="@dimen/activity_margin_16dp"/>

            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_description"
            android:textColor="@color/colorTextDark"
            android:paddingRight="@dimen/activity_margin_16dp"
            android:paddingLeft="@dimen/activity_margin_16dp"/>

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_description"
            android:textColor="@color/colorTextDark"
            android:layout_gravity="center_horizontal|center"
            android:padding="@dimen/activity_margin_16dp"/>


    </LinearLayout>


</ScrollView>